Success Page H1 changed

--- a/success.html
+++ b/success.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1 class="display-4">Awesome!</h1>
+  <h1 class="display-4">Brilliant!</h1>
   <p class="lead">You have been successfully subscribed to our newsletter. Congratulations</p>
   <hr class="my-4">
 </div>
